--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="wAnfF4h6cKYlK9o6IQlxHyQAQ_rBYLbFFLJhPCXhUrk" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEST NILE ONLINE SHOP</title>
     
@@ -1543,4 +1544,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
