--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="wAnfF4h6cKYlK9o6IQlxHyQAQ_rBYLbFFLJhPCXhUrk" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEST NILE ONLINE SHOP</title>
     
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>WEST NILE ONLINE SHOP | Best Quality Products in West Nile</title>
+
+    <meta name="description" content="Shop the best electronics, clothes, and home goods at WEST NILE ONLINE SHOP. Fast delivery and quality products across West Nile and Uganda.">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <section id="header">
@@ -1546,5 +1546,6 @@
 </body>
 
 </html>
+
 
 
